Unlink Not Work in Outliner in "Scenes" or "Blener File" #112767

Closed
opened 2023-09-23 10:45:23 +02:00 by Grigoriy Titaev · 4 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 3.6.3, 4.0.0 (2023-09-23)

Short description of error
Unlink Not Work in Outliner in "Scenes" or "Blender File"

Steps to Reproduce

  • Open default scene
  • Go to outliner scene view mode:
  • Select cube present in scene-1 -> Right click -> unlink (operation will fail because object is in collection)
  • Now select cube present in scene-2 -> unlink it (works because object is in master collection)

Original Report:

Exact steps for others to reproduce the error

  1. Open start scene
  2. Create new scene "Scene.001"
  3. In "Scene" click on "Cube" -> Shift+L -> Link Ojects to Scene -> "Scene.001"
  4. In Ontliner switch to Scenes or Blener File
  5. Try Unlink "Cube" object from "Scene" and "Scene.001".
  6. Unlink object from "Scene.001" works fine, but Unlink object from "Scene" do not work.

Unlink.png

**System Information** Operating system: Windows 10 **Blender Version** Broken: 3.6.3, 4.0.0 (2023-09-23) **Short description of error** Unlink Not Work in Outliner in "Scenes" or "Blender File" **Steps to Reproduce** - Open default scene - Go to outliner `scene view` mode: - Select cube present in `scene-1` -> Right click -> unlink (operation will fail because object is in `collection`) - Now select cube present in `scene-2` -> unlink it (works because object is in `master collection`) - - - Original Report: **Exact steps for others to reproduce the error** 1. Open start scene 2. Create new scene "Scene.001" 3. In "Scene" click on "Cube" -> `Shift+L` -> `Link Ojects to Scene` -> "Scene.001" 4. In `Ontliner` switch to `Scenes` or `Blener File` 5. Try `Unlink` "Cube" object from "Scene" and "Scene.001". 6. Unlink object from "Scene.001" works fine, but Unlink object from "Scene" do not work. ![Unlink.png](/attachments/ad3c5ae3-7607-4c3f-a0af-c17bc3d265ae)
Grigoriy Titaev added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-23 10:45:24 +02:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-09-25 06:26:43 +02:00
Pratik Borhade self-assigned this 2023-09-25 06:26:51 +02:00

In Outliner in "Scenes" or "Blener File".
If you try delete "Cube" object in scene "Scene.001", Blender will crash: #105968

Maybe these issues are related.

In Outliner in "Scenes" or "Blener File". If you try delete "Cube" object in scene "Scene.001", Blender will crash: #105968 Maybe these issues are related.
Member

For scene mode: The problem here is that, we were trying to unlink object from scene/master-collection. AFAICS fix is to iterate through all scene's collection and unlink it properly.

I'll submit the fix shortly.

For scene mode: The problem here is that, we were trying to unlink object from scene/master-collection. AFAICS fix is to iterate through all scene's collection and unlink it properly. I'll submit the fix shortly.
Member

Updated the report to match with actual problem.

And fix: #112955

Updated the report to match with actual problem. And fix: https://projects.blender.org/blender/blender/pulls/112955
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-23 14:49:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112767
No description provided.