Fix #112767: Outliner unlink operation fails to unlink from scene

When in scene mode, operation searches the object in master collection
to unlink. but object can be in any collection. So iterate thorugh all
collections present in scene to unlink the object